apps/immich/immich-ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: immich
  labels:
    app: immich-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
      - name: ml
        image: ghcr.io/immich-app/immich-machine-learning:release
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
        volumeMounts:
        - name: cache
          mountPath: /cache
      volumes:
      - name: cache
        emptyDir: {}
